--- a/browser/scss/graph/main.scss
+++ b/browser/scss/graph/main.scss
@@ -1,12 +1,12 @@
 .graph {
-    width: 50px;
-    height: 50px;
+    width: 500px;
+    height: 500px;
     border: 1px solid #aeaeae;
     background-color: #eaeaea;
 }
-.bar {
-    width: 8px;
-    margin: 1px;
+.barLine {
+    height: 20px;
+    margin: 10px;
     display: inline-block;
     position: relative;
     background-color: #aeaeae;
