--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -1,3 +1,38 @@
+.mdl-button {
+  width: 150px;
+}
+
+.rightSubtitle{
+  color: #55637a;
+  font-style: italic;
+}
+
+.twitterLine {
+  display: block;
+  margin: 50px auto 0 auto;
+}
+
+.rightTitle {
+  /*text-align: center;*/
+  margin: 150px 0 20px 0;
+  font-size: 30px;
+  font-weight: 300;
+}
+
+.leftTitle {
+  text-align: center;
+  margin-top: 60px;
+  font-size: 50px;
+  font-weight: 300;
+}
+
+.leftSubtitle {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 200;
+}
+
 .box {
   background-color: #218D9B;
   height: 100px;
@@ -30,6 +65,7 @@
   }
 }
 .leftSide {
+  padding: 25px;
   width: 50%;
   height: 100%;
   left: 0px;
