--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -1,3 +1,31 @@
+.resultsOuter {
+  font-size: 30px;
+  font-weight: lighter;
+}
+
+.resultsData {
+  color: white;
+  margin: 40px 0;
+}
+
+.theResult{
+  padding: 100px;
+  height: 100%;
+  text-align: center;
+}
+
+.twitterImage {
+  border-radius: 5%;
+  width: 40%;
+  display: block;
+  margin: 0 auto 0 auto;
+
+  -webkit-box-shadow: 0px 0px 9px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 9px -2px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 9px -2px rgba(0,0,0,0.75);
+
+}
+
 .mdl-button {
   width: 150px;
 }
