--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -1,5 +1,15 @@
-.resultsOuter {
+.polTextColor {
+  font-weight: normal;
   font-size: 30px;
+}
+
+.magTextColor {
+  font-weight: normal;
+  font-size: 30px;
+}
+
+.resultsOuter {
+  font-size: 25px;
   font-weight: lighter;
 }
 
