--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <base href="/" />
-    <title>Fullstack Academy Generated Application</title>
+    <title>Twitter Language Processor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.red-blue.min.css" />
     <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
